# ToyChabot

./: .env.example  .gitignore  02_webui_st.py  03_langchainic_chatbot.ipynb  chatbot.ipynb  lc_st.py  pt&LCEL.ipynb  pyproject.toml  readme.md  requirements.txt
